# bobby-home

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  readme.md  setup.sh  shell.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blank.yml  codeql-analysis.yml  docker-images.yml  test.yml  tests.yml
arduino_uno-1/: app.ino  arduino1.ino  readme.md
core/: .dockerignore  .editorconfig  .env.example  .env.test  Makefile  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  livingroom.yaml
core/.esphome/: livingroom.yaml.json
core/app/: .coverage  .coveragerc  Dockerfile  coverage.xml  entrypoint.sh  package-lock.json  package.json  register_device.py  requirements.txt  setup.cfg  vite.config.js
core/app/account/: factories.py
core/app/alarm/: admin.py  domain_integrations.py  factories.py  forms.py  messaging.py  models.py  notifications.py  tasks.py  urls.py
core/app/automation/: admin.py  dataclasses.py  factories.py  models.py  tasks.py  tests.py
core/app/camera/: factories.py  messaging.py  models.py  urls.py
core/app/devices/: models.py
core/app/hello_django/: celery.py  settings.py  urls.py  views.py
core/app/house/: models.py  urls.py
core/app/mqtt_services/: apps.py  models.py  tasks.py
core/app/notification/: tasks.py
core/app/setup/: models.py  tests.py  urls.py  views.py
core/app/template_addons/: assets_helper.py  tags.py
core/app/utils/: date.py
core/config/mosquitto/: mosquitto-test.conf  mosquitto.conf  test-passwd
core/config/redis/: redis-broker.conf
core/docker/flower/: Dockerfile
core/mosquitto/: generate-root-ca.sh
core/scripts/: wip_network.sh
esp8266-1/: .gitignore  AsyncWait.cpp  AsyncWait.h  SetupWifi.cpp  SetupWifi.h  esp_mqtt.ino  globals.h  readme.md  secure_credentials example.h
espcam/: platformio.ini
espcam/src/: main.cpp
object-detection/: .editorconfig  .env.test  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  mqtt-objectdetection.cpp  readme.md  sync_exclude
object-detection/docker/functional_tests/: Dockerfile
object-detection/functional_tests/: test_functional.py  test_object_detection.py
object-detection/processing/: CMakeLists.txt  object_detect.hpp  object_detection.cpp  object_detection.hpp
raspberrypi_central/: change_hostname.sh  dumb_install.sh  install-docker.sh  install-opencv.sh  install.sh  keys.sh  network.sh  pivpn-install.sh  readme.md  setup.py  setup.sh  sync_exclude
raspberrypi_central/.github/workflows/: docker-images.yml
raspberrypi_central/attachments/: docker-compose.prod.yml  docker-compose.yml
raspberrypi_central/attachments/app/: Dockerfile  Pipfile  alarm.py  alarm_notify.py  alarm_requests.py  requirements.txt  run.py  run_task.py  s3-upload.py  send-alert.py  send_alert.py  send_sms.py  tasks.py  thread_manager.py
raspberrypi_central/attachments/build-image/: Dockerfile
raspberrypi_central/camera/: Pipfile  camera.py  motion.py  onchange.sh  sound.py
raspberrypi_central/camera-docker/: docker-compose.yml
raspberrypi_central/camera-docker/build-image/: Dockerfile
raspberrypi_central/camera-docker/camera/: Dockerfile  tempimage.py
raspberrypi_central/core/: .editorconfig  .env.example  .env.test  Makefile  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-setup.sh  setup.md  up.sh
raspberrypi_central/core/app/: .gitignore  Dockerfile  babel.config.json  celerybeat-schedule  entrypoint.sh  package-lock.json  package.json  register_device.py  requirements.txt  rollup.config.js  vite.config.js
raspberrypi_central/core/scripts/: get_rpi_model.sh  network.sh
raspberrypi_central/docker/mosquitto/: .gitignore  README.md  init.sh
raspberrypi_central/docs/: docker-pyhon.md
raspberrypi_central/mosquitto/: README.md  generate-client-keys.sh  generate-password.sh  generate-root-ca.sh
raspberrypi_central/mqtt/: .env.example  index.js  package-lock.json  package.json
raspberrypi_central/nodejs/: docker-compose.yml
raspberrypi_central/ovh-api-bash-client/: README.md  dynhost.sh  ovh-api-bash-client.sh
raspberrypi_central/ovh-api-bash-client/scripts/: dynhost-cron.sh  dynhost.sh
raspberrypi_central/pihole/: docker-compose.yml
raspberrypi_central/scripts/rpi/: network.sh
raspberrypi_central/smart-camera/: .env.example  .pylintrc  Makefile  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dumb_camera.service  dumb_install.sh  install.sh  readme.md  sync_exclude
raspberrypi_central/smart-camera/app/: Dockerfile  alarm.py  camera.py  dumb_camera.py  dumb_camera.sh  entrypoint.sh  entrypoint_dumb_camera.sh  listen_frame.py  requirements.txt  sound.py  wip_roi.py
raspberrypi_central/smart-camera/build-image/: Dockerfile  build.sh  readme.md
raspberrypi_central/telegram-bot/: .env.example  docker-compose.yml
raspberrypi_central/telegram-bot/app/: bot.py  (+2 more)
raspberrypi_central/webapp/: .env.dev  .env.test  .gitignore  Makefile  Pipfile  docker-compose.prod.yml  docker-compose.yml  docker-network.sh  readme.md  up.sh
smart-camera/: .dockerignore  .env.example  .env.test  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dumb_camera.service
smart-camera/app/: Dockerfile  Dockerfile.sound  Makefile  camera.py  dumb_camera.py  entrypoint.sh  entrypoint_dumb_camera.sh  external_cameras.py  http_external_cameras.py  listen_frame.py  requirements.sound.txt  requirements.test.txt  requirements.txt
(+671 files in other folders)
